--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pydantic==2.11.2
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
 pytest==8.3.5
+pytest-asyncio==0.26.0
 python-dotenv==1.1.0
 regex==2024.11.6
 requests==2.32.3
